# waterswamp

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_REPORT.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  aggressive-fix.sh  diagnose-and-fix-sqlx.sh  docker-compose.yml  flake.nix  github-actions-ci.yml  guia-rust.md  k8s-deployment.yaml  planejamento.md  plano-implementacao-detalhado.md  private.pem  public.pem  rbac_model.conf  waterswamp-improvements.patch
apps/api-server/: .env  Cargo.toml  Makefile.toml
apps/api-server/src/: casbin_setup.rs  constants.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  middleware.rs  openapi.rs  shutdown.rs  state.rs  web_models.rs
apps/api-server/src/api/: mod.rs
apps/api-server/src/config/: cors.rs
apps/api-server/src/extractors/: client_info.rs  current_user.rs  mod.rs
apps/api-server/src/handlers/: admin_handler.rs  audit_handler.rs  audit_handlers.rs  audit_middleware.rs  audit_services.rs  auth_handler.rs  email_verification_handler.rs  handlers_documented.rs  health_handler.rs  metrics_handler.rs  mfa_handler.rs  mod.rs  protected_handler.rs
apps/api-server/tests/: WAREHOUSE_TESTS.md  admin_api_tests.rs  api_admin_tests.rs  api_auth_tests.rs  audit_log_tests.rs  budget_classifications_tests.rs  catalog_tests.rs  catmat_tests.rs  catser_tests.rs  common.rs  driver_tests.rs  drs_requisition_tests.rs  drs_transfer_tests.rs  drs_warehouse_movement_tests.rs  email_verification_tests.rs  fleet_tests.rs  fueling_tests.rs  geo_regions_tests.rs  integration_tests.rs  invoice_adjustment_tests.rs  invoice_tests.rs  location_tests.rs  mfa_tests.rs  organizational_tests.rs  password_reset_tests.rs  register_tests.rs  requisition_tests.rs  security_tests.rs  supplier_tests.rs  transfer_tests.rs  warehouse_tests.rs
apps/siorg-worker/: .env  .env.example  Cargo.toml  README.md
apps/siorg-worker/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: errors.rs  lib.rs  metrics.rs
crates/core-services/: Cargo.toml
crates/core-services/src/: field_encryption.rs  jwt.rs  lib.rs  security.rs  session.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs  models.rs  pagination.rs  ports.rs  validation.rs  value_objects.rs
crates/email-service/: Cargo.toml
crates/email-service/src/: config.rs  lib.rs  mock.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations_auth/: 20251030190346_name=create_casbin_table.up.sql  20251108191219_name=refresh_token.up.sql  20251113223636_name=add_email_to_users.down.sql  20251113223636_name=add_email_to_users.up.sql  20251117151623_name=mfa_totp.up.sql  20251130160308_name=add_role_and_verified_at.down.sql  20251205230000_create_states_table.down.sql  20251205230000_create_states_table.up.sql  20251205230100_create_cities_table.down.sql  20251205230100_create_cities_table.up.sql  20251205230200_create_campuses_table.down.sql  20251205230200_create_campuses_table.up.sql  20251205230300_create_unit_categories_table.down.sql  20251205230300_create_unit_categories_table.up.sql  20251205230400_create_organizational_units_table.down.sql  20251205230400_create_organizational_units_table.up.sql  20251216000001_name=create_states_table.down.sql  20251216000001_name=create_states_table.up.sql  20251216000002_name=create_cities_table.up.sql  20251216000003_name=create_site_types_table.up.sql  20251216000004_name=create_building_types_table.up.sql  20251216000005_name=create_space_types_table.up.sql  20251216000006_name=create_department_categories_table.up.sql  20251216000007_name=create_sites_table.up.sql  20251216000008_name=create_buildings_table.down.sql  20251216000008_name=create_buildings_table.up.sql  20251216000009_name=create_floors_table.up.sql  20251216000010_name=create_spaces_table.down.sql  20251216000010_name=create_spaces_table.up.sql
crates/persistence/migrations_auth (2)/: 20251111201258_name=token_rotation_family.down.sql
crates/persistence/migrations_logs/: 20251117194744_name=audit_logs.up.sql
crates/persistence/migrations_main/: 00000000000000_create_extensions_and_base_functions.down.sql  00000000000000_create_extensions_and_base_functions.up.sql  00000001_name=create_countries_table.down.sql  00000001_name=create_countries_table.up.sql  00000002_name=create_states_table.up.sql  00000003_name=create_cities_table.up.sql  00000004_name=create_site_types_table.down.sql  00000004_name=create_site_types_table.up.sql  00000005_name=create_building_types_table.down.sql  00000006_name=create_space_types_table.up.sql  00000007_name=create_department_categories_table.up.sql  00000008_name=create_sites_table.down.sql  20251020000000_name=enable_postgis.up.sql  20251103151830_name=create_users_table.up.sql  20251108191219_name=refresh_token.down.sql  20251108191219_name=refresh_token.up.sql  20251111201258_name=token_rotation_family.up.sql  20251117151609_name=email_verification.down.sql  20251117151609_name=email_verification.up.sql  20251117151623_name=mfa_totp.down.sql  20251127144753_name=update_users_table.up.sql  20251127145203_name=fix_casbin_rule.up.sql  20251130160308_name=add_role_and_verified_at.up.sql  20251211230831_create_budget_classifications_table.down.sql  20251211230831_create_budget_classifications_table.up.sql  20251212160308_create_countries_table.down.sql  20251212160308_create_countries_table.up.sql  20251212160308_name=create_countries_table.up.sql  20251212160309_create_states_table.down.sql  20251212160309_create_states_table.up.sql  20251212160309_name=create_states_table.down.sql  20251212160309_name=create_states_table.up.sql  20251212160310_create_cities_table.down.sql  20251212160310_create_cities_table.up.sql  20251212160310_name=create_cities_table.down.sql  20251212160311_create_units_of_measure_table.down.sql  20251212160311_create_units_of_measure_table.up.sql  20251212160312_create_catalog_groups_table.down.sql  20251212160312_create_catalog_groups_table.up.sql  20251212160312_create_catmat_tables.down.sql  (+238 more)
crates/persistence/src/: db_utils.rs  lib.rs
docs/: ARCHITECTURE.md  (+21 more)
(+398 files in other folders)
