[package]
name = "waterswamp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.48.0", features = ["full", "signal"] }
casbin = { version = "2.15.0", features = ["runtime-tokio", "logging"] }
axum-casbin = "1.3.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "time", "uuid"] }
sqlx-adapter = { version = "1.8.0", features = ["postgres"] }
config = "0.15.18"
dotenvy = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
anyhow = "1.0.100"
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bcrypt = "0.17"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tower_governor = "0.8"
governor = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }
utoipa-rapidoc = { version = "4.0", features = ["axum"] }
utoipa-redoc = { version = "4.0", features = ["axum"] }

prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"

[dev-dependencies]
axum-test = "18.1.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
