[workspace]
members = [
    "apps/api-server",
    "crates/domain",
    "crates/persistence",
    "crates/core-services",
    "crates/application",
]
resolver = "2" # Habilita o novo resolver de features

# Dependências compartilhadas (opcional, mas recomendado)
[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.48.0", features = ["full", "signal"] }
casbin = { version = "2.15.0", features = ["runtime-tokio", "logging"] }
axum-casbin = "1.3.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "migrate"] }
sqlx-adapter = { version = "1.8.0", features = ["postgres"] }
config = "0.15.18"
dotenvy = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
anyhow = "1.0.100"
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
argon2 = { version = "0.5", features = ["std"] }
zxcvbn = "3.1.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tower_governor = "0.8"
governor = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
regex = "1.12"
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }
utoipa-rapidoc = { version = "5", features = ["axum"] }
utoipa-redoc = { version = "5", features = ["axum"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"
axum-test = "18.1.0"
once_cell = "1.19"
lettre = { version = "0.11", features = ["tokio1", "smtp-transport", "tracing", "tokio1-native-tls"] }
tera = "1.20"
htmlescape = "0.3"
async-trait = "0.1.89"
rand = "0.8"
base32 = "0.5"
base64 = "0.22"
qrcode = "0.14"
mockall = "0.14.0"
futures = "0.3.31"
totp-rs = { version = "5.7", features = ["qr", "gen_secret",  "otpauth" ] }
moka = { version = "0.12", features = ["future"] }
rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }
reqwest = { version = "0.12", features = ["json"] }
tower-cookies = { version = "0.11", features = ["signed", "private"] }
cookie = { version = "0.18", features = ["secure", "percent-encode"] }
hex = "0.4"
hmac = "0.12"
aes-gcm = "0.10"
