[package]
name = "siorg-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
application = { path = "../../crates/application" }
domain = { path = "../../crates/domain" }
persistence = { path = "../../crates/persistence" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { workspace = true }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config and env
dotenvy = "0.15"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
