[package]
name = "siorg-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
application = { path = "../../crates/application" }
domain = { path = "../../crates/domain" }
persistence = { path = "../../crates/persistence" }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config and env
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }
