[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
core_services = { path = "../core-services" }

# Utilities
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.11"
tokio = { version = "1.0", features = ["macros"] }
