[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
core_services = { path = "../core-services" }

# Utilities
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
totp-rs = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
tokio = { workspace = true, features = ["full", "signal"] }
axum = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
