[package]
name = "core_services"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }

argon2 = { workspace = true }
zxcvbn = { workspace = true }
anyhow = { workspace = true }
tower = {  workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors"] }
axum = { workspace = true }

jsonwebtoken = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
cookie = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
aes-gcm = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
