[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
validator = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
axum = { workspace = true }
sqlx = { workspace = true, features = ["macros", "uuid", "chrono", "rust_decimal"] }
regex = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["serde"] }
utoipa = { workspace = true, features = ["uuid", "chrono", "decimal"] }
