[package]
name = "email_service"
version = "0.1.0"
edition = "2021"

[features]
# Enable mock email service for testing
mock = []

[dependencies]
# Nossas crates do workspace
domain = { path = "../domain" }

chrono = { workspace = true }
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
serde_json = { workspace = true }
lettre = { workspace = true }
tera = { workspace = true }
htmlescape = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "rt-multi-thread"] }
tracing = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
