[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
core_services = { path = "../core-services" }
anyhow = { workspace = true }

sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
